# aso-deep-segmentation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  seg_model_graph
deep_seg/scripts/: generate_test.py  lars_binary_dataset.py  train.py  water_segmentation_model.py
notebooks/: 02_debug.ipynb  seg_model_graph
